<resources>
    <string name="app_name">IndustryDiary app</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="msg_text_empty">Please enter your value.</string>
    <string name="msg_loading">Please wait. Loading.</string>
    <string name="title">An evidence resource for VET Teachers</string>
    <string name="new_industry_text">New Industry \nEngagement Evidence</string>
    <string name="existing_industry_text">Existing Industry \nEngagement Evidence</string>
    <string name="my_industry_contacts">MY INDUSTRY \nCONTACTS</string>
    <string name="txt_events_info"><![CDATA[EVENTS, INFO \n& RESOURCES]]></string>
    <string name="txt_upload_tps">UPLOAD \nTAS PLAN</string>
    <string name="txt_my_details">MY \nDETAILS</string>
    <string name="hint_username">Username</string>
    <string name="hint_pin">Pin</string>
    <string name="hint_identifier">Identifier No.</string>
    <string name="btn_login">Login</string>
    <string name="msg_username_required">Username Required</string>
    <string name="msg_valid_pin">Enter Valid Pin</string>
    <string name="msg_pin_required">Pin Required</string>
    <string name="str_cnt_mnu_edit">Edit</string>
    <string name="str_cnt_mnu_add">Add</string>
    <string name="str_cnt_mnu_delete">Delete</string>
    <string name="btn_save">UPDATE</string>
    <string name="msg_empty">Cannot Empty</string>
    <string name="msg_valid_postalCode">Invalid Postal Code</string>
    <string name="msg_valid_phoneNo">Invalid Phone No</string>
    <string name="validation_valid_email">Invalid Email</string>
    <string name="str_logout">Logout</string>
    <string name="str_syncOverWifi">Sync Over Wifi Only</string>
    <string name="hint_email">Email</string>
    <string name="hint_accreditaitons">Accreditations</string>
    <string name="hint_Rto">RTO</string>
    <string name="hint_school">School</string>
    <string name="hint_tachingNo">Teaching No.</string>
    <string name="hint_name">Name</string>
    <string name="standardCompetencies"><![CDATA[Standard & Competencies]]></string>
    <string name="industryActivity">Industry Activity</string>
    <string name="refreshing">Refreshing...</string>
    <string name="please_wait">Please Wait...</string>
    <string name="download">Download Other</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="delete">Delete</string>
    <string name="pause_all">Pause all</string>
    <string name="cancel_all">Cancel all</string>
    <string name="manage_download">Manage Download</string>
    <string name="manage_upload">Manage download</string>
    <string name="upload_file">upload File</string>
    <string name="upload_image">Upload Image</string>
    <string name="lorem">Using your device, take a photo of each page of your TAS Plan and upload it below.</string>
    <string name="loginInfo">Please enter your username and PIN below. To obtain this information, log into your QMS account and select ‘Linked Devices’.</string>
    <string name="done">Done</string>
    <string name="have_you">HAVE YOU ACHIEVED GOALS OUTLINE IN YOUR TAS? IF NOT, WHY NOT?</string>
    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="err_msg_ref_title">Please enter the reference title</string>
    <string name="err_msg_date">Please select a date</string>
    <string name="err_msg_time">Please select time</string>
    <string name="msg_empty_hours">Please enter the number of hours</string>
    <string name="err_msg_venue">Please enter the venue for the contact</string>
    <string name="err_msg_title">Please enter title/role of the contact</string>
    <string name="err_msg_name">Please enter name of the contact</string>
    <string name="err_msg_organization">Please enter organization for the contact</string>
    <string name="err_msg_street_address">Please enter street address</string>
    <string name="err_msg_suburb">Please enter suburb</string>
    <string name="err_msg_valid_postal_code">Postal code must be a number</string>
    <string name="err_msg_postal_code">Please enter your postal code</string>
    <string name="err_msg_phone">Please enter a phone number for the contact</string>
    <string name="err_msg_email">Please enter an email for the contact</string>
    <string name="err_msg_valid_email">Please enter a valid email for the contact</string>
    <string name="err_msg_qualification">Please enter the qualification</string>
    <string name="err_msg_comment">Please enter comments</string>
    <string name="err_msg_opportunities">Please enter opportunities</string>
    <string name="err_msg_action">Please enter action required</string>
    <string name="err_msg_details">Please enter the description</string>
    <string name="err_msg_feedback">Please enter the feedback message</string>
    <string name="err_msg_skills">Please enter skills/knowledge.</string>
    <string name="err_msg_future">Please enter the future engagement.</string>
    <string name="err_msg_training">Please enter training and assessment.</string>
    <string name="err_msg_general">Please enter the general</string>
    <string name="err_msg_best_practice">Please enter best practice identified.</string>
    <string name="errr_msg_rating">Please enter ratings</string>
    <string name="err_msg_areas">Please enter areas to improve.</string>
    <string name="err_msg_evidence">Please enter the evidence</string>
    <string name="err_msg_links">Please enter the links</string>
    <string name="err_msg_have_you">Please enter goal achievement details</string>
    <string name="login">Signing in...</string>
    <string name="loadingFromQMS">Loading information from QMS</string>
    <string name="saveProgress">Saving progress...</string>
    <string name="save">Saving...</string>


    <string name="text_comment">Examples include Industry needs, Industry situation, local Industry situation, skills
        required by Industry, etc </string>
     <string name="text_opportunities"><![CDATA[Examples include Able to take students or teachers Work Placement, skills & knowledge development, training opportunities, learn more about Industry and discuss further Industry engagement (Industry visits, talk with students), Industry Networking opportunities, develop projects and partnerships with Industry, discuss Apprenticeship/Traineeship opportunities (ways to link students to directly),
         Input into VET assessment and training design and validation etc ]]> </string>

    <string name="text_actionRequired">Examples include call back, follow up, email , arrange meeting, discuss, forward details, reminder in calendar, provide feedback, implement etc</string>

    <string name="text_evidence">examples include comment with validation/signature from Industry, written industry comment, (both need details of industry contact who provided information)</string>

    <string name="text_textbox_over_competency"><![CDATA[examples include Industry currency, upskilling, skills & knowledge development, addresses competency elements and performance criteria, input into Training & Assessment Strategy, assessment of specific tasks, Input into validation of assessment tasks, address specific tasks, develop resources in this specific competency, other etc ]]></string>
    <string name="textEvidenceInfo">Examples include photos/videos of activity, of industry, with industry contact, undertaking activity, certificates/statement of attainment, calendar invite, VET network (industry involved) participation certificate/ MyPL reference, testimonial (signed), industry event registration/flyer, meeting agenda (signed).</string>
    <string name="moreinfo">For more information on the ASQA Standards </string>
    <string name="click_here"> click here.</string>
    <string name="err_msg_venue1">Please enter the venue</string>
    <string name="err_msg_findOut">Please enter other reason.</string>
    <string name="err_msg_otherActivity">Please provide other activity.</string>
    <string name="err_msg_otherPurpose">Please provide purpose of other activity.</string>


</resources>
