<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/buttonDownload"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_default"
            android:background="@color/button"
            android:text="@string/download"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/buttonDownloadTAS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_default"
            android:background="@color/button"
            android:text="Download Your Own TAS" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonPause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pause" />

            <Button
                android:id="@+id/buttonResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resume" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonPauseAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pause_all" />

            <Button
                android:id="@+id/buttonCancelAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_all" />
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/gridAlreadyDowloadList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#808080"
        android:dividerHeight="1dp"
        android:numColumns="3"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        />

    <GridView
        android:id="@+id/gridDownloadList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#808080"
        android:dividerHeight="1dp"
        android:numColumns="3"
        android:layout_below="@+id/gridAlreadyDowloadList"
        android:layout_above="@+id/buttonLayout"
        android:paddingTop="10dp"
       />

</RelativeLayout>